--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,11 @@ jobs:
         server: 	78.153.210.22
         username: clientftp
         password: ${{ secrets.ftp_password }}
+        local-dir: ./webspace/httpdocs/client.westatlanticdesign.ie/
+        exclude: | 
+          **/.git*
+          **/.scss
+          **/.sass
+          **/css.map
+          **/.yml
+          **/.md
