--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         server: 	78.153.210.22
         username: clientftp
         password: ${{ secrets.ftp_password }}
-        local-dir: ./webspace/httpdocs/client.westatlanticdesign.ie/
+        local-dir: webspace/httpdocs/client.westatlanticdesign.ie/
         exclude: | 
           **/.git*
           **/.scss
